# editdistance

./: .gitignore  .travis.yml  MANIFEST.in  README.rst  appveyor.yml  pdm_build.py  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CI_CD_workflow.yml  build.yml
editdistance/: __init__.py  _editdistance.cpp  _editdistance.h  byctypes.py  bycython.cpp  bycython.pyx
requirements/: test.txt
src/editdistance/: __init__.pxd  bycython.cpp  bycython.pxd  bycython.pyx
test/: test_editdistance.py
