[build-system]
requires = ["pdm-backend", "cython"]
build-backend = "pdm.backend"


[project]
name = "editdistance"
version = "0.8.1"
description = "Fast implementation of the edit distance (Levenshtein distance)"
authors = [
    {name = "Hiroyuki Tanaka", email = "aflc0x@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/roy-ht/editdistance"
Documentation = "https://github.com/roy-ht/editdistance"
Repository = "https://github.com/roy-ht/editdistance"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true

[tool.pdm.dev-dependencies]
dev = [
    "cython>=3.0",
]
